table css odd even row

--- a/src/main/resources/templates/mcq/examMcq.html
+++ b/src/main/resources/templates/mcq/examMcq.html
@@ -5,6 +5,23 @@
 <head>
     <title>EXAM | MCQS - Multiple Choice Question System</title>
     <div th:replace="fragments/header.html :: headerCSS"  th:remove="tag"> header CSS</div>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
 </head>
 <body>
 
