--- a/src/main/resources/templates/user/viewAllUser.html
+++ b/src/main/resources/templates/user/viewAllUser.html
@@ -6,6 +6,23 @@
 
     <title>Home | MCQS - Multiple Choice Question System</title>
     <div th:replace="fragments/header.html :: headerCSS"> header CSS</div>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
 </head>
 
 <body>
