--- a/src/main/resources/templates/mcq/examMcq.html
+++ b/src/main/resources/templates/mcq/examMcq.html
@@ -7,21 +7,33 @@
     <div th:replace="fragments/header.html :: headerCSS"  th:remove="tag"> header CSS</div>
     <style>
         table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
+            /*font-family: arial, sans-serif;*/
+            /*border-collapse: collapse;*/
             width: 100%;
+            /*table-layout: fixed;*/
+            /*width: 100px;*/
+
         }
+
 
         td, th {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
+            word-wrap:break-spaces;
+            /*line-height: 300%;*/
+            height: 300%;
+            vertical-align: top;
+            font-size: 20px;
         }
 
         tr:nth-child(even) {
             background-color: #dddddd;
         }
-    </style>
+        tr:nth-child(odd) {
+            background-color: #cbccdd;
+        }
+</style>
 </head>
 <body>
 
@@ -37,20 +49,25 @@
         <form class="form-horizontal" method="post" th:action="@{/mcq/result}" th:object="${mcqDtoResult}">
 
 
-            <div class="product-status mg-b-15">
+<!--            <div class="product-status mg-b-15">-->
                 <div class="container-fluid">
-                    <div class="row">
+<!--                    <div class="row">-->
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="product-status-wrap">
+<!--                            <div class="product-status-wrap">-->
                                 <h4>EXAM: QUESTION SET <p th:text="${ set }" th:remove="tag"></p></h4>
 <!--                                <div class="add-product">-->
 <!--                                    <a href="#">Add Library</a>-->
 <!--                                </div>-->
                                 <div class="asset-inner">
                                     <table>
-                                        <tr>
+                                        <col width="400px" />
+                                        <col width="200px" />
+                                        <col width="200px" />
+                                        <col width="200px" />
+                                        <col width="200px" />
+                                        <tr style="background-color: #96dd3e;">
 <!--                                            <th>NO.</th>-->
-                                            <th colspan="2">QUESTION</th>
+                                            <th>QUESTION</th>
                                             <th>OPTION 1</th>
                                             <th>OPTION 2</th>
                                             <th>OPTION 3</th>
@@ -62,7 +79,7 @@
                                             <input type="hidden" th:value="${ mcq.getQuestion()}"
                                                    th:name="${'resultList['+ iter.index + '].question'}">
 
-                                            <td colspan="2"> <i th:utext="${'<b>'+ (iter.index+1) + '</b>. &nbsp; ' + mcq.getQuestion()}"/></td>
+                                            <td style="height:100px;"><b> <i th:utext="${'<b>'+ (iter.index+1) + '</b>. &nbsp; ' + mcq.getQuestion()}"/></b></td>
                                             <td> <input type="radio" th:value="${ mcq.getOption1()}"
                                                         th:name="${'resultList['+ iter.index + '].ansChosen'}"> <i
                                                     th:utext="${ mcq.getOption1()}"></i>
@@ -178,9 +195,9 @@
                                 </div>
 
                                 </div>
-                        </div>
+<!--                        </div>-->
                     </div>
-                </div>
+<!--                    </div>-->
             </div>
 
 
@@ -260,9 +277,9 @@
             <!--            <input type="text" th:name="${mcqResult[0].quesNo}" value="333333">-->
             <!--            <input type="text" th:name="${mcqResult[1].quesNo}" value="222222">-->
 
-            </div>
-        </form>
 
+        </form>
+    </div>
     </div>
 </div>
 
