--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,11 +19,69 @@
     <!-- Start Welcome area -->
     <div class="all-content-wrapper">
         <div th:replace="fragments/header.html ::  header" th:remove="tag">   Header </div>
+<div style="padding: 3%">
+        <div>
+            <h1 style="text-align: center; color: #1a30eb" >Multiple Choice Question System </h1>
 
+            <h3> <br>Secure Online Quiz Maker</h3>
+           <p>
+               FireFlies's hosted Online Testing software provides the best Quiz maker tool for teachers & businesses. Used globally for business & enterprise training Tests, pre-employment assessments, online certifications and compliance, recruitment & health and safety quizzes, schools, universities, distance learning, lead generation, online courses, E-Learning, practice Tests & more.
+            </p>
 
-        Your Home
+            <p>
+            You can select to charge Users to take your online Exams, so you can Sell Quizzes Online and receive payments instantly.
+            Our custom web-based Testing tool allows you to easily create secure online Exams & assessments with advanced Quiz settings such as time limits, public & private Test access, randomize Questions, instant feedback, multiple choice, matching, short answer, video, audio, essay & more Question types, embed exams in Wordpress & Google Sites.
+            </p>
+       </div>
 
+        <div>
+        <h3> Business & Education plans </h3>
+            <p>
+            We understand every organization is different. That's why we've created affordable Online Testing Plans to suit your needs. From occasional usage to Enterprise Quiz Maker requirements, ClassMarker is your reliable exam maker and online testing solution.
+            Quiz Maker API & Webhooks
+            Have Test results sent to your website in real time!
+            Quiz maker API & Webhooks. View our Partner Integrations.
+            View Examples
+            •	View Screenshots in our User Manual and How to Videos.
+            •	Try our Sample Online Test.
 
+            </p>
+        </div>
+        <div>
+
+            <h3> </br>OOP</h3>
+
+            Object Oriented programming is a programming style which is associated with the concepts like class, object, Inheritance, Encapsulation, Abstraction, Polymorphism. Most popular programming languages like Java, C++, C#, Ruby, etc. follow an object-oriented programming paradigm.
+
+            <h4> <br>What is Object-Oriented Programming? </h4>
+            <p> Object-Oriented programming (OOP) refers to a type of programming in which programmers define the data type of a data structure and the type of operations that can be applied to the data structure.
+
+                <br> </p>
+
+            As Java being the most sought-after skill, we will talk about object-oriented programming concepts in Java. An object-based application in Java is based on declaring classes, creating objects from them and interacting between these objects. I have discussed Java Classes and Objects which is also a part of object-oriented programming concepts, in my previous blog.
+
+            Edureka 2019 Tech Career Guide is out! Hottest job roles, precise learning paths, industry outlook & more in the guide. Download now.
+            What are the four basic principles/ building blocks of OOP (object oriented programming)?
+            The building blocks of object-oriented programming are Inheritance, Encapsulation, Abstraction, and Polymorphism. Let’s understand more about each of them in the following sequence:
+
+            Inheritance
+            Encapsulation
+            Abstraction
+            Polymorphism
+            What are the benefits of Object Oriented Programming?
+            Improved productivity during software development
+            Improved software maintainability
+            Faster development sprints
+            Lower cost of development
+            Higher quality software
+            However, there are a few challenges associated with OOP, namely:
+            Steep learning curve
+            Larger program size
+            Slower program execution
+            Its not a one-size fits all solution
+
+        </div>
+</div>
 
         <div th:replace="fragments/footer.html :: footer" th:remove="tag"> Footer </div>
     </div> <!--  END of  all-content-wrapper-->
