--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -102,7 +102,7 @@
                             <label class="control-label" for="username">Username</label>
                             <input type="text" placeholder="Username" title="Please enter you username" required=""
                                    value="" name="username" id="username" onkeyup="usernameCheck(this);"
-                                   class="form-control">
+                                   class="form-control" minlength="6" maxlength="10">
                             <!--                            <span class="help-block small">Your Unique Username</span>-->
                             <b><i>
                                 <div id="usernameMsg"></div>
@@ -111,7 +111,7 @@
                         <div class="form-group">
                             <label class="control-label" for="password">Password</label>
                             <input type="password"  placeholder="******" required=""
-                                   value="" name="password" id="password" class="form-control"
+                                   value="" name="password" id="password" class="form-control" minlength="6" maxlength="15"
                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" >
                             <span class="help-block small">Your strong password</span>
                         </div>
